src/main/webapp/CSS/CommonUtils.css
/*~~~~~~~~~~~~~~~~~~~~~~~~ Common CSS ~~~~~~~~~~~~~~~~~~~~~~~*/

.theme-light {
    --color-secondary: #fbfbfe;
    --font-color: #000000;
    --thought-box-theme: #d0edeb;
    --link-color: #1e5df0;
    --error-backgrounds: rgba(255, 255, 255, 0.8);
    --academic-timeline: #c1d0f4;
    --loading-color: #2fff00;
    --loading-background-color: #fbfbfe;
}

.theme-dark {
    --color-secondary: #242c2c;
    --font-color: #ffffff;
    --thought-box-theme: #253534;
    --link-color: #f8f8af;
    --error-backgrounds: rgba(255, 255, 255, 0);
    --academic-timeline: #1e5df0;
    --loading-color: #fff000;
    --loading-background-color: #242c2c;
}

html {
    scroll-behavior: smooth;
    font-family: 'Cagliostro', sans-serif;
    background-color: var(--color-secondary);
    color: var(--font-color);
    --color-easy: #17d214;
    --color-easy-back: #ceffcd;
    --color-medium: #ff9500;
    --color-medium-back: #f2d2a4;
    --color-hard: #ff4040;
    --color-hard-back: #f1b2b2;
    --color-all: #413a96;
    --color-all-back: #a6a3cc;
}

a {
    color: var(--link-color);
}

img {
    text-align: center;
}

.generic_div {
    display: block;
    padding-bottom: 50px;
}

.help_div {
    position: fixed;
    display: none;
    background: var(--color-secondary);
    height: 100vh;
    width: 99%;
    margin: 0px;
    opacity: 1;
    transition: 500ms;
}

#top_help {
    position: fixed;
    top: 15%;
    left: 20%;
    font-size: 50px;
    margin: 0px;
}

#bottom_help {
    position: fixed;
    bottom: 15%;
    left: 40%;
    font-size: 50px;
    margin: 0px;
}

.loading_div {
    background-color: var(--loading-background-color);
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 500 !important;
    top: 0;
    left: 0;
    transform: scale(2.5);
    transition: 500ms;
    opacity: 1;
}

#mainbody {
    visibility: hidden;
}


/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Loading Sign~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

.ring {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 150px;
    height: 150px;
    background: transparent;
    border: 3px solid #3c3c3c;
    border-radius: 50%;
    text-align: center;
    line-height: 150px;
    font-family: sans-serif;
    font-size: 20px;
    color: var(--loading-color);
    letter-spacing: 4px;
    text-transform: uppercase;
    text-shadow: 0 0 10px var(--loading-color);
    box-shadow: 0 0 20px var(--loading-color);
}

.ring:before {
    content: '';
    position: absolute;
    top: -3px;
    left: -3px;
    width: 100%;
    height: 100%;
    border: 3px solid transparent;
    border-top: 3px solid var(--loading-color);
    border-right: 3px solid var(--loading-color);
    border-radius: 50%;
    animation: animateC 2s linear infinite;
}

span {
    display: block;
    position: absolute;
    top: calc(50% - 2px);
    left: 50%;
    width: 50%;
    height: 4px;
    background: transparent;
    transform-origin: left;
    animation: animate 2s linear infinite;
}

span:before {
    content: '';
    position: absolute;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    background: var(--loading-color);
    top: -6px;
    right: -8px;
    box-shadow: 0 0 20px var(--loading-color);
}

@keyframes animateC {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

@keyframes animate {
    0% {
        transform: rotate(45deg);
    }
    100% {
        transform: rotate(405deg);
    }
}


/*~~~~~~~~~~~~~~~~~~~~~~~~ Navbar ~~~~~~~~~~~~~~~~~~~~~~~*/

.header-section {
    overflow: auto;
    border-bottom: solid var(--font-color) 1px;
    position: fixed;
    padding: 10px;
    width: 100%;
    left: 0;
    top: 0;
    z-index: 99 !important;
    font-size: 20px;
    background-color: var(--color-secondary);
    /*Flex details*/
    display: flex;
    transition: 500ms;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: flex-end;
}

.header-links {
    color: var(--font-color);
    text-decoration: none;
    display: block;
    padding: 20px;
    transition: 500ms;
    cursor: pointer;
}

.header-links:hover {
    transform: scale(1.1);
}

.navbar-icon {
    padding: 30px;
    display: none;
    transform: scale(2.0);
}

.theme_bulb {
    position: fixed;
    top: 12.5%;
    right: 10%;
    transform: scale(2) rotate(180deg);
    z-index: 98 !important;
}

.theme_chain {
    position: fixed;
    top: 20%;
    right: 5%;
    transform: scale(5);
    z-index: 98 !important;
}


/*~~~~~~~~~~~~~~~~~~~~~~~~ Topic Headers ~~~~~~~~~~~~~~~~~~~~~~~*/

.header-common-left {
    padding-left: 75px;
    padding-right: 75px;
    padding-top: 110px;
    padding-bottom: 20px;
    font-weight: bold;
    font-size: 50px;
    z-index: 1 !important;
}

.header-common-right {
    padding-left: 75px;
    padding-right: 75px;
    padding-top: 110px;
    padding-bottom: 20px;
    font-weight: bold;
    font-size: 50px;
    z-index: 1 !important;
    text-align: right;
}


/*~~~~~~~~~~~~~~~~~~~~~~~~ Topic Bodies ~~~~~~~~~~~~~~~~~~~~~~~*/

.body-common {
    padding-top: 10px;
    padding-bottom: 250px;
    padding-left: 50px;
    padding-right: 50px;
    font-size: 20px;
    z-index: 1;
    text-align: justify;
}


/*~~~~~~~~~~~~~~~~~~~~~~~~ Thought Box ~~~~~~~~~~~~~~~~~~~~~~~*/

#thought-link {
    color: var(--font-color);
    text-decoration: none;
    display: block;
    transition: 500ms;
    cursor: pointer;
}

#thought-link:hover {
    transform: scale(1.1);
}

.thought-box {
    position: fixed;
    bottom: 50px;
    right: 30px;
    width: 300px;
    display: none;
    margin: 50px;
    background: var(--thought-box-theme);
    padding: 20px;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-around;
    font-size: 20px;
}

.sb4:before {
    content: "";
    position: absolute;
    border-left: 10px solid transparent;
    border-right: 10px solid var(--thought-box-theme);
    border-top: 10px solid var(--thought-box-theme);
    border-bottom: 10px solid transparent;
    left: auto;
    right: 100px;
    bottom: -20px;
    transition: visibility 0s, opacity 0.5s linear;
}

#lname {
    margin-top: 10px;
    resize: none;
    color: var(--font-color);
    background-color: var(--color-secondary);
}

#post_button {
    font-family: 'Cagliostro', sans-serif;
    font-size: 20px;
    width: auto;
    color: var(--font-color);
    border-radius: 10px;
    padding: 5px;
    text-align: center;
    background-color: var(--color-secondary);
    border: 2px solid var(--font-color);
    cursor: pointer;
}


/*~~~~~~~~~~~~~~~~~~~~~~~~ Footer Section ~~~~~~~~~~~~~~~~~~~~~~~*/

.footer-section {
    border-top: solid var(--font-color) 1px;
    position: fixed;
    padding: 5px;
    font-size: 25px;
    left: 0;
    bottom: 0;
    width: 100%;
    z-index: 99 !important;
    background-color: var(--color-secondary);
    /*Flex details*/
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}


/*~~~~~~~~~~~~~~~~~~~~~~~~ Response Section ~~~~~~~~~~~~~~~~~~~~~~~*/

@media only screen and (max-width:1250px) {
    .header-section {
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        font-size: 35px;
    }
    .navbar-icon {
        display: flex
    }
    .header-links {
        display: none;
    }
    .body-common {
        padding-bottom: 300px;
    }
    .sb4:before {
        border-left: 10px solid transparent;
        border-right: 10px solid var(--thought-box-theme);
        border-top: 10px solid var(--thought-box-theme);
        border-bottom: 10px solid transparent;
        left: auto;
        right: 30px;
        bottom: -20px;
    }
    .thought-box {
        font-size: 50px;
        height: auto;
        width: auto;
    }
    #post_button {
        font-size: 50px;
    }
    #lname {
        font-size: 50px;
    }
    .summary {
        justify-content: space-between;
        flex-direction: column;
        align-items: center;
    }
    #top_help {
        top: 7.5%;
        left: 2%;
    }
    #bottom_help {
        top: 15%;
        left: 7%;
    }
    .theme_bulb {
        top: 0;
        z-index: 198 !important;
    }
    .theme_chain {
        top: 5%;
        transform: scale(7.5);
        z-index: 198 !important;
    }
}

